# cv_agent

./: .gitignore  Dockerfile.api  Dockerfile.app  README.md  agent.py  app.py  checklist_deploy.md  pyproject.toml  render.yaml  requirements.txt  run_backend.py
api/: auth.py  database.py  main.py  schemas.py
api/routes/: auth.py  chat.py  profile.py
prompts/: hr_recruiter.md
